# oci-registry-stats

./: .gitignore  README.md  TODO.md  pyproject.toml  registry-stats.yaml
.github/workflows/: collect-registry-stats.yml
data/: latest.csv  latest.json
data/shields/: dockerhub_ros2_desktop_vnc_monthly.json  dockerhub_ros2_desktop_vnc_total.json  dockerhub_ros2_desktop_vnc_weekly.json  ghcr_ros2_desktop_vnc_package_monthly.json  ghcr_ros2_desktop_vnc_package_total.json  ghcr_ros2_desktop_vnc_package_weekly.json
data/snapshots/: dockerhub_ros2_desktop_vnc.jsonl  ghcr_ros2_desktop_vnc_package.jsonl
registry_stats/: __main__.py  cli.py  config.py  history.py  models.py  render.py  runner.py
registry_stats/clients/: http.py
registry_stats/collectors/: dockerhub.py  ghcr.py
registry_stats/parsing/: ghcr_html.py  numbers.py
tests/: test_collectors.py  test_history.py  test_parse_ghcr.py  test_parse_numbers.py
tests/fixtures/: dockerhub_repository.json  ghcr_package.html  ghcr_version.html
