[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-registry-stats"
version = "0.1.0"
description = "Collect Docker Hub and GHCR download statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
registry-stats = "registry_stats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["registry_stats"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
